stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_validate__validate_builtins_with_type_check.snap
---
source: crates/stepflow-cli/tests/commands/test_validate.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - validate
    - "--flow=tests/builtins/blob_test.yaml"
    - "--config=tests/builtins/stepflow-config.yml"
    - "--type-check"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
📊 Validation results: 0 fatal, 0 errors, 3 warnings

⚠️  Warnings:
  WARN Field access '$.blob_id' on step 'put_blob' cannot be validated: no output schema available ($.steps[1].input.blob_id)
  WARN Field access '$.blob_id' on step 'put_blob' cannot be validated: no output schema available ($.output.blob_id)
  WARN Field access '$.data' on step 'get_blob' cannot be validated: no output schema available ($.output.retrieved_data)

----- stderr -----
