stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_validate__validate_help.snap
---
source: crates/stepflow-cli/tests/commands/test_validate.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - validate
    - "--help"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
Validate workflow files and configuration.

Validate workflow files and configuration without executing them. This performs workflow validation (structure, step dependencies, value references), configuration validation (plugin definitions, routing rules), component routing validation, and schema validation. Returns 0 for success, 1+ for validation failures (suitable for CI/CD pipelines).

# Examples

```bash

# Validate workflow with auto-detected config

stepflow validate --flow=examples/basic/workflow.yaml

# Validate with specific config

stepflow validate --flow=workflow.yaml --config=my-config.yml

# Validate with type checking

stepflow validate --flow=workflow.yaml --type-check

# Validate with strict type checking

stepflow validate --flow=workflow.yaml --type-check --strict

```

Usage: stepflow validate [OPTIONS] --flow <FILE>

Options:
      --flow <FILE>
          Path to the workflow file to validate

      --type-check
          Enable type checking in addition to validation.
          
          Performs static type analysis to catch type mismatches before execution.

      --strict
          Treat untyped component outputs as errors instead of warnings.
          
          Only applicable when --type-check is enabled.

      --config <FILE>
          The path to the stepflow config file.
          
          If not specified, will look for `stepflow-config.yml` in the directory containing the workflow file. If that isn't found, will also look in the current directory.

      --omit-stack-trace
          Omit stack traces (line numbers of errors)

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
