stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_validate__validate_with_type_check.snap
---
source: crates/stepflow-cli/tests/commands/test_validate.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - validate
    - "--flow=tests/basic.yaml"
    - "--type-check"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
✅ Validation passed with no errors

----- stderr -----
